--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -11,12 +11,12 @@ footer {
     padding: 20px 0;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 .footer_banner{
   width: 10rem;
   height: 2rem;
-  margin: 0px 3rem;
+  /* margin: 0px 3rem; */
 }
 
 .footer__socials {
@@ -24,7 +24,10 @@ footer {
     flex-direction: row;
     gap: 1.4rem;
     font-size: 20px ;
-    margin: auto;
+    /* margin: 0px 3rem; */
+  }
+  .twitter{
+    font-size: 25px;
   }
   a{
     text-decoration: none;
@@ -35,11 +38,7 @@ footer {
     width: 3px;
     height: 2rem;
   }
-@media screen and (max-width: 600px) {
-    .permalink {
-        flex-direction: column;
-        gap: 1.5rem;
-    }
+  @media only screen and (min-width : 320px) and (max-width:600px) {
     .footer__socials {
         margin-bottom: 2.6rem;
         font-size: 15px;
@@ -49,11 +48,14 @@ footer {
     padding: 35px 0;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     }
     .footer_banner{
       width: 6rem;
       height: 1rem;
-      margin: 0px 3rem;
+      /* margin: 0px 3rem; */
+    }
+    .twitter{
+      font-size: 18px;
     }
 }
