--- a/src/components/Login/style.scss
+++ b/src/components/Login/style.scss
@@ -97,8 +97,110 @@
   
   }
 
-  @media screen and (max-width:600px) {
+  @media only screen and (min-width : 320px) and (max-width:600px) {
 
+    .base-container {
+      width: 290px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      background-color:#fff;
+    
+      .header {
+        font-size: 24px;
+        font-family: "Open Sans", sans-serif;
+        text-align: center;
+      }
+    
+      .contents {
+        display: flex;
+        flex-direction: column;
+        background-color: #fff;
+        border: rgb(215, 206, 206) solid 1px;
+        border-radius: 2rem;
+        // width: 280px;
+    
+        .image {
+          width: 21em;
+          img {
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+            align-items: center;
+            margin-left: 7.2rem;
+            margin-top: 1rem;
+          }
+        }
+    
+        .form {
+          margin-top: 1em;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          width: 300px;
+    
+          .form-group {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            width: fit-content;
+            padding-left: 4px;
+            margin-left: 28px;
+            
+            input {
+              margin-top: 4px;
+              
+              padding-left: 15px;
+              min-width: 19em;
+              height: 40px;
+              padding: 0px 10px;
+              font-size: 16px;
+              font-family: "Open Sans", sans-serif;
+              background-color: #f3f3f3;
+              border: 0;
+              border-radius: 4px;
+              margin-bottom: 18px;
+              transition: all 250ms ease-in-out;
+              &:focus {
+                outline: none;
+                box-shadow: 0px 0px 12px 0.8px #3474dbb2;
+              }
+            }
+          }
+        }
+      }
+      .btnlogin{
+        width: 200px;
+        padding: 15px 0;
+        text-align: center;
+        margin: 20px 10px;
+        border-radius: 25px;
+        font-weight: bold;
+        border: 2px solid #f51b2a;
+        background: transparent;
+        color: rgb(5, 0, 0);
+        cursor: pointer;
+        position: relative;
+        overflow: hidden;
+      }
+      span{
+        background: #f70b0b;
+        height: 100%;
+        width: 0%;
+        border-radius: 25px;
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        z-index: -1;
+        transition: 0.5s;
+        border: 1px red solid;
+      }
+      .btnlogin:hover span{
+        width: 100%;
+        background-color: #f51b2a;
+      }
+    
+    }
     
   }
 
