--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -7,19 +7,19 @@
     justify-content: space-between;
     /* background-color:#fff; */
 }
-.dld{
+.dld4{
     width: 200px;
 }
-.pdp{
+.pdp4{
     width: 100px;
    
 }
-@media screen and (max-width:600px){
-    .dld{
-        width: 150px;
+@media only screen and (min-width : 320px) and (max-width:600px){
+    .dld4{
+        width: 120px;
     }
-    .pdp{
-        width: 70px
+    .pdp4{
+        width: 50px
     }
     
 }
