--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -1,3 +1,10 @@
 .flybtn{
     background-color: green;
 }
+
+@media only screen and (min-width : 320px) and (max-width:600px){
+    .log{
+        margin: 2rem 2rem;
+        padding: 2rem 2rem;
+    }
+}
