--- a/src/components/ScreenCapture/screen.css
+++ b/src/components/ScreenCapture/screen.css
@@ -1,4 +1,15 @@
 .screenBtn{
     position: absolute;
     z-index: 1000;
+    width: 150px;
+    height: 45px;
+    /* margin: 10px; */
+    border: none;
+    background-color: cornflowerblue;
+    color: white;
+    border-radius: 8px;
+    font-size: 20px;
+    cursor: pointer;
+    bottom: 10rem;
+    left: 45rem;
 }
