--- a/src/components/Flyer/flyer.css
+++ b/src/components/Flyer/flyer.css
@@ -33,6 +33,7 @@
     border: 10px solid green;
     border-style: double;
     border-radius: 5px;
+
   }
   .body{
     display: flex;
@@ -77,4 +78,19 @@
   
   #cancelBtn {
     background-color: crimson;
+  }
+
+  @media only screen and (min-width : 320px) and (max-width:600px) {
+    .cardBody{
+      width: 380px;
+      height: 420px;
+  
+    }
+    .better{
+      font-size: 20px;
+      margin-top: 2px;
+    }
+    .right{
+      font-size: 20px;
+    }
   }
