--- a/src/components/ProfileImg/profile.css
+++ b/src/components/ProfileImg/profile.css
@@ -11,6 +11,21 @@
     padding: 1rem;
     /* width: 20rem; */
 }
+.uploadImg{
+    
+        width: "200px";
+        height: "200px";
+        border-radius: "50%";
+        object-fit: "cover";
+        border: "4px solid green",
+    /* style={{
+        width: "200px",
+        height: "200px",
+        borderRadius: "50%",
+        objectFit: "cover",
+        border: "4px solid green",
+    }} */
+}
 .confirmationContent{
     width: 500px;
     height: 350px;
