--- a/src/pages/Dashboard/dashboard.css
+++ b/src/pages/Dashboard/dashboard.css
@@ -59,4 +59,11 @@
       font-size: 26px;
       margin-top: 90px;
     }
+    .banner{
+      width: 100%;
+      height: 100vh;
+      background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(/public/d2.jpg);
+      background-size:auto;
+      background-position: center;
+    }
   }
