--- a/src/components/Flyer/flyer.css
+++ b/src/components/Flyer/flyer.css
@@ -91,7 +91,7 @@
     .cardBody{
       width: 330px;
       height: 410px;
-      background-size:80%;
+      background-size:90%;
       background-position:bottom;
       /* background-image: none; */
 
@@ -99,28 +99,21 @@
   
     }
     .better{
-      font-size: 20px;
+      font-size: 10px;
       margin-top: 2px;
     }
     .body{
       /* background-image: url(../../public/d5.jpg); */
       background-size:50%;
       background-position:bottom;
-      /* background-image: none; */
+      display: inline;
     }
     .left{
-      margin-left: 0rem;
+      margin-left: -2rem;
+      margin-top: 3.5rem;
     }
     .right{
       margin-left: 3rem;
-    }
-    .dld2{
-      width: 160px;
-      height: 40px;
-    }
-    .pdp{
-      width: 50px;
-      height: 50px;
     }
     .name{
       font-weight: 500;
@@ -129,7 +122,7 @@
       padding-top: 10px;
       width: 260px;
       height: 30px;
-      margin-left: 7.6rem;
+      margin-left: -4.5rem;
       font-size: 16px;
       line-height: 1.3;
     }
@@ -141,8 +134,34 @@
       color: rgb(206, 16, 16);
       width: 100px;
       height: 20px;
-      margin:auto;
+      margin-left:13rem;
+      margin-top: -5rem;
       border-radius: 20px;
       border: 3px solid green;
+    }
+    .headers{
+      display: flex;
+      justify-content: space-between;
+      padding: 0px 4px;
+      margin: 0;
+    }
+    .dld2{
+      width: 150px;
+      height: 40px;
+    }
+    .pdp{
+      width: 50px;
+      height: 50px;
+    }
+    .center{
+      text-align: center;
+      padding-top: 5px;
+      background-color: #000;
+      color: #fff;
+      width: 103px;
+      height: 19px;
+      margin-left: 0.5rem;
+      border-radius: 20px;
+      font-size: 12px;
     }
   }
