--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,17 @@
   /* box-sizing: border-box; */
 }
 :root {
-  --flyer-width : 860;
-  --flyer-height: 480;
+  --flyer-width : 640;
+  --flyer-height: 500;
+  --cardr-width : 500;
+  --card-height: 500;
+}
+
+@media only screen and (min-width : 320px) and (max-width:600px) {
+  :root {
+    --card-width: 320;
+    --card-height:250;
+    --flyer-width : 340;
+  --flyer-height: 350;
+  }
 }
