--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -12,8 +12,8 @@
   }
   
   .modalContainer {
-    width: 700px;
-    height: 600px;
+    width: 900;
+    height: 900;
     border-radius: 12px;
     background-color: white;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
