--- a/src/components/Flyer/flyer.css
+++ b/src/components/Flyer/flyer.css
@@ -89,8 +89,8 @@
 
   @media only screen and (min-width : 320px) and (max-width:600px) {
     .cardBody{
-      width: 330px;
-      height: 410px;
+      width: 330;
+      height: 410;
       background-size:90%;
       background-position:bottom;
       /* background-image: none; */
