--- a/src/components/Card/card.css
+++ b/src/components/Card/card.css
@@ -9,17 +9,21 @@
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+    margin: 0 auto;
+
   }
   
   .modalContainer {
-    width: 900;
-    height: 900;
+    width: var(--card-width);
+    height: var(--card-height);
     border-radius: 12px;
     background-color: white;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     display: flex;
     flex-direction: column;
     padding: 25px;
+    margin: auto;
+    border: 1px solid red;
   }
   
   .modalContainer .title {
