--- a/src/components/Flyer/flyer.css
+++ b/src/components/Flyer/flyer.css
@@ -1,120 +1,140 @@
+.cardBody{
+  width: var(--flyer-width);
+  height: var(--flyer-height);
+  border: 10px solid green;
+  border-style: double;
+  border-radius: 5px;
+  margin: auto;
+  display: flex;
+  position: relative;
+}
 
-  .title{
-    font-size: 10px;
-    margin-top: 2px;
-  }
-  .headers{
-    display: flex;
-    justify-content: space-between;
-    padding: 5px 12px;
-  }
+.hope{
+  /* display: flex; */
+  align-items: center;
+  padding: 0.5rem;
+  margin: 0.5rem 0 0 2rem;
+
+    /* position: absolute; */
+}
+
+.head{
+  display: inline-block;
+  font-size: 30px;
+  font-weight: bolder;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+
+  /* position: relative; */
+}
+.note{
+  display: block;
+  position: absolute;
+  align-items: center;
+  margin: 7rem 0 0 2rem;
+  font-size: 18px;
+  font-weight: 800;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+}
+.profileImage{
+  margin: 9rem 0 0 3rem;
+  position: absolute;
+}
+.myName{
+  position: absolute;
+  font-weight: 600;
+  /* border: 1px solid green; */
+  text-align: center;
+  padding-top: 2px;
+  width: 230px;
+  /* height: 30px; */
+  line-height: 1.4;
+  text-align: center;
+ 
+}
   .dld2{
-    width: 200px;
-    height: 50px;
+    position: relative;
+    height: 530px;
+    min-width: 0;
+    width: 380px;
+    margin: 1rem 0 00.5rem 6rem;
+    float: right;
+    
+   
+    /* z-index: 2; */
   }
   .pdp{
-    width: 70px;
-    height: 70px;
+    max-width: 70px;
+    max-height: 70px;
   }
-  .center{
+  .governor{
+    position: absolute;
     text-align: center;
-    padding-top: 14px;
-    background-color: #000;
-    color: #fff;
-    width: 150px;
-    height: 30px;
-    margin: auto;
-    border-radius: 20px;
+    padding: 10px 3px;
+    background-color: rgba(0,0,0,.5);
+    color: rgb(242, 236, 241);
+    width: 100%;
+    font-size: 22px;
+    font-weight: bolder;
+    height: 4rem;
+    bottom: 0;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   }
-  .name{
-    font-weight: 600;
-    /* border: 1px solid green; */
-    text-align: center;
-    padding-top: 14px;
-    width: 260px;
-    height: 30px;
-    margin-left: 25rem;
-    line-height: 2;
-    margin-bottom: 3rem;
-  }
+
   .vote{
+    position: absolute;
     text-align: center;
     padding-top: 8px;
     padding-bottom: 8px;
     font-style: italic;
-    /* background-color: #000; */
-    color: rgb(206, 16, 16);
+    background-color: #000;
+    color: rgb(219, 206, 206);
     width: 80px;
     height: 20px;
-    margin-left: 30.4rem;
+    margin-left: 16rem;
+    margin-top: 26rem;
     border-radius: 20px;
     border: 3px solid green;
     font-size: 20px;
   }
-  .text{
-    text-align: center;
-  }
-  .cardBody{
-    border: 10px solid green;
-    border-style: double;
-    border-radius: 5px;
-    background-image: url(../../public/d5.jpg);
 
-  }
-  .body{
-    display: flex;
-    margin-top: -3rem;
-    justify-content: space-between;
-    padding: 7px;
-  }
-  .left{
-    margin-left: -2rem;
-  }
-  .right{
-    margin-left: 15rem;
-  }
-  .dauda{
-    font-size: large;
-    font-weight: 800;
-    font-style: oblique;
-    font-family: sans-serif;
-  }
-  .gov{
-    font-size: 23px;
-    font-weight: 500;
-    color: #021d02;
-    font-style: bold;
-  }
   
-
-  @media only screen and (min-width : 320px) and (max-width:600px) {
+  @media screen and (max-width: 1024px) {
     .cardBody{
-      width: 330;
-      height: 410;
-      background-size:90%;
-      background-position:bottom;
-      /* background-image: none; */
-
-      /* background-position: bottom; */
-  
+      height: 600px;
     }
-    .better{
-      font-size: 10px;
-      margin-top: 2px;
+    .hope{
+      /* display: flex; */
+      align-items: center;
+      padding: 0.5rem;
+      margin: 0.5rem 0 0 2rem;
+    
+        /* position: absolute; */
     }
-    .body{
-      /* background-image: url(../../public/d5.jpg); */
-      background-size:50%;
-      background-position:bottom;
-      display: inline;
+    .head{
+      display: inline-block;
+      font-size: 25px;
+      font-weight: bolder;
+      font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    
+      /* position: relative; */
     }
-    .left{
-      margin-left: -2rem;
-      margin-top: 3.5rem;
+    .pdp{
+      width: 55px;
+      height: 55px;
     }
-    .right{
-      margin-left: 3rem;
+    .dld2{
+      position: relative;
+      height: 590px;
+      min-width: 0;
+      width: 380px;
+      margin: 1rem 0 00.5rem 6rem;
+      float: right;
+      
+     
+      /* z-index: 2; */
     }
+   
     .name{
       font-weight: 500;
       /* border: 1px solid green; */
@@ -139,11 +159,26 @@
       border-radius: 20px;
       border: 3px solid green;
     }
-    .headers{
-      display: flex;
-      justify-content: space-between;
-      padding: 0px 4px;
-      margin: 0;
+   
+  }
+
+  @media screen and (max-width: 1024px) {
+   
+  }
+
+  @media only screen and (max-width:600px) {
+    .vote{
+      text-align: center;
+      padding-top: 5px;
+      font-style: italic;
+      /* background-color: #000; */
+      color: rgb(206, 16, 16);
+      width: 100px;
+      height: 20px;
+      margin-left:13rem;
+      margin-top: -5rem;
+      border-radius: 20px;
+      border: 3px solid green;
     }
     .dld2{
       width: 150px;
@@ -152,16 +187,5 @@
     .pdp{
       width: 50px;
       height: 50px;
-    }
-    .center{
-      text-align: center;
-      padding-top: 5px;
-      background-color: #000;
-      color: #fff;
-      width: 103px;
-      height: 19px;
-      margin-left: 0.5rem;
-      border-radius: 20px;
-      font-size: 12px;
     }
   }
