--- a/src/index.css
+++ b/src/index.css
@@ -5,17 +5,42 @@
   /* box-sizing: border-box; */
 }
 :root {
-  --flyer-width : 640;
-  --flyer-height: 500;
-  --cardr-width : 500;
-  --card-height: 500;
+  --card-width : 820px;
+  --card-height: 700px;
+
+  --flyer-width : 90%;
+  --flyer-height: 100%;
+
+  --profile-width: 200px;
+  --profile-height: 200px;
+  
+  --resize-width: 500px;
+  --resize-height: 500px;
 }
 
-@media only screen and (min-width : 320px) and (max-width:600px) {
+@media screen and (max-width: 1024px) {
   :root {
-    --card-width: 100;
-    --card-height:80;
-    --flyer-width : 330;
-  --flyer-height: 410;
+    --card-width: 90%;
+    --card-height:70%;
+
+    --flyer-width : 95%;
+    --flyer-height:90%;
+
+    --profile-height: 50px;
+    --profile-width: 50px
   }
 }
+
+@media only screen and (max-width:600px) {
+  :root {
+    --card-width: 80%;
+    --card-height:60%;
+
+    --flyer-width : 90%;
+    --flyer-height:100%;
+
+    --profile-height: 50px;
+    --profile-width: 50px
+  }
+}
+
