--- a/src/pages/Dashboard/dashboard.css
+++ b/src/pages/Dashboard/dashboard.css
@@ -1,9 +1,10 @@
-.banner{
-    width: 100%;
+.home{
+    width: 100vw;
     height: 100vh;
     background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(/public/d2.jpg);
     background-size:auto;
     background-position: center;
+    margin: 0 auto;
   }
   .content1{
     width: 100%;
@@ -12,6 +13,7 @@
     transform: translateY(-50%);
     text-align: center;
     color:#fff;
+    /* margin: 0 auto; */
   }
   .content1 h1{
     font-size: 50px;
@@ -58,12 +60,5 @@
     .content1 h1{
       font-size: 26px;
       margin-top: 90px;
-    }
-    .banner{
-      width: 100%;
-      height: 100vh;
-      background-image: linear-gradient(rgba(0,0,0,0.75),rgba(0,0,0,0.75)), url(/public/d2.jpg);
-      background-size:auto;
-      background-position: center;
     }
   }
