--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -1,10 +1,14 @@
-.flybtn{
+/* .flybtn{
     background-color: green;
+
+} */
+.log{
+    margin: auto;
 }
 
-@media only screen and (min-width : 320px) and (max-width:600px){
+@media only screen and (max-width:600px){
     .log{
-        margin: 2rem 1.2rem;
+        margin: auto;
         padding: 2rem 1.2rem;
     }
 }
