--- a/src/components/Flyer/flyer.css
+++ b/src/components/Flyer/flyer.css
@@ -82,6 +82,7 @@
   }
 
   .vote{
+    z-index: 1000;
     position: absolute;
     text-align: center;
     padding-top: 8px;
@@ -101,7 +102,7 @@
   
   @media screen and (max-width: 1024px) {
     .cardBody{
-      height: 600px;
+      height: var(--card-height)
     }
     .hope{
       /* display: flex; */
@@ -112,12 +113,7 @@
         /* position: absolute; */
     }
     .head{
-      display: inline-block;
       font-size: 25px;
-      font-weight: bolder;
-      font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    
-      /* position: relative; */
     }
     .pdp{
       width: 55px;
@@ -130,62 +126,95 @@
       width: 380px;
       margin: 1rem 0 00.5rem 6rem;
       float: right;
-      
-     
-      /* z-index: 2; */
     }
-   
-    .name{
-      font-weight: 500;
+    .profileImage{
+      margin: 10rem 0 0 3rem;
+    }
+    .myName{
+      position: absolute;
+      font-weight: 200;
       /* border: 1px solid green; */
       text-align: center;
-      padding-top: 10px;
-      width: 260px;
-      height: 30px;
-      margin-left: -4.5rem;
-      font-size: 16px;
-      line-height: 1.3;
+      padding-top: 2px;
+      width: 130px;
+      font-size: 10px;
+      /* line-height: 0.5; */
+      text-align: center;
+     
     }
     .vote{
-      text-align: center;
-      padding-top: 5px;
-      font-style: italic;
-      /* background-color: #000; */
-      color: rgb(206, 16, 16);
-      width: 100px;
-      height: 20px;
-      margin-left:13rem;
-      margin-top: -5rem;
-      border-radius: 20px;
-      border: 3px solid green;
+      margin-left: 15rem;
+      margin-top: 30rem;
     }
-   
-  }
-
-  @media screen and (max-width: 1024px) {
    
   }
 
   @media only screen and (max-width:600px) {
-    .vote{
-      text-align: center;
-      padding-top: 5px;
-      font-style: italic;
-      /* background-color: #000; */
-      color: rgb(206, 16, 16);
-      width: 100px;
-      height: 20px;
-      margin-left:13rem;
-      margin-top: -5rem;
-      border-radius: 20px;
-      border: 3px solid green;
+    .cardBody{
+      height: var(--flyer-height);
     }
-    .dld2{
-      width: 150px;
-      height: 40px;
+    .hope{
+      margin: 0.5rem 0 0 0.5rem;
+    }
+    .head{
+      display: inline-block;
+      font-size: 12px;
+      font-weight:500;
     }
     .pdp{
+      width: 25px;
+      height: 25px;
+    }
+    .dld2{
+      position: relative;
+      height: 250px;
+      min-width: 0;
+      width: 150px;
+      margin: 3rem 0 0 2rem;
+      float: right;
+    }
+    .note{
+      display: block;
+      position: absolute;
+      align-items: center;
+      margin: 3.5rem 0 0 1rem;
+      font-size: 8px;
+      font-weight: 500;
+    }
+    .profileImage{
+      margin: 4rem 0 0 0.5rem;
+      
+    }
+    .vote{
+      margin-left: 15rem;
+      margin-top: 30rem;
+    }
+    .governor{
+      position: absolute;
+      text-align: center;
+      padding: 10px 3px;
+      background-color: rgba(0,0,0,.5);
+      color: rgb(242, 236, 241);
+      width: 100%;
+      font-size: 10px;
+      font-weight: bolder;
+      height: 1.5rem;
+      bottom: 0;
+      font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    }
+    .vote{
+      z-index: 1000;
+      padding-top: 3px;
+      padding-bottom: 4px;
+      font-style: italic;
+      background-color: #000;
+      color: rgb(219, 206, 206);
       width: 50px;
-      height: 50px;
+      height: 15px;
+      margin-left: 10.5rem;
+      margin-top: 14.5rem;
+      border-radius: 20px;
+      border: 3px solid green;
+      font-size: 10px;
     }
   }
