--- a/src/components/ScreenCapture/screen.css
+++ b/src/components/ScreenCapture/screen.css
@@ -25,21 +25,14 @@
     }
   }
 
-@media only screen and (min-width : 320px) and (max-width:600px) {
+  @media only screen and (max-width:600px) {
     .screenBtn{
-        position: absolute;
-        z-index: 1000;
-        width: 150px;
-        height: 45px;
+        width: 110px;
+        height: 30px;
         /* margin: 10px; */
-        border: none;
-        background-color: cornflowerblue;
-        color: white;
-        border-radius: 8px;
-        font-size: 20px;
+        font-size: 12px;
         cursor: pointer;
-        bottom: 6rem;
+        bottom: 7rem;
         left: 8rem;
     }
-
   }
