--- a/src/components/Flyer/flyer.css
+++ b/src/components/Flyer/flyer.css
@@ -52,6 +52,9 @@
   text-align: center;
  
 }
+/* .name{
+  font-size: 12px;
+} */
   .dld2{
     position: relative;
     height: 530px;
@@ -216,5 +219,13 @@
       border-radius: 20px;
       border: 3px solid green;
       font-size: 10px;
+    }
+    .myName{
+      font-weight: 100;
+      width: 130px;
+      font-size: 10px;
+      z-index: 1;
+      padding: 0;
+     
     }
   }
