--- a/src/components/ProfileImg/profile.css
+++ b/src/components/ProfileImg/profile.css
@@ -16,8 +16,8 @@
         border: "4px solid green",
 }
 .confirmationContent{
-    width: 50px;
-    height: 35px;
+    width: 500px;
+    height: 300px;
     border-radius: 12px;
     background-color: white;
     box-shadow: 0 0 0 50vmax rgba(0,0,0,0.4);
@@ -53,28 +53,16 @@
    height: 45px;
    margin: 10px;
    border: none;
-   background-color: rgb(234, 240, 235);
-   color: white;
+   background-color: rgb(162, 158, 240);
+   color: rgb(25, 2, 2);
    border-radius: 8px;
    font-size: 20px;
    cursor: pointer;
 }
-@media only screen and (min-width : 320px) and (max-width:600px) {
-    .crop{
-        align-items: center; 
-        width: 50px;
-        height: 45px;
-        margin: 10px;
-        border: none;
-        background-color: rgb(234, 240, 235);
-        color: white;
-        border-radius: 8px;
-        font-size: 20px;
-        cursor: pointer;
-     }
-     .confirmationContent{
-        width: 30px;
-        height: 50px;
+@media screen and (max-width: 1024px) {
+    .confirmationContent{
+        width: 400px;
+        height: 350px;
         border-radius: 12px;
         background-color: white;
         box-shadow: 0 0 0 50vmax rgba(0,0,0,0.4);
@@ -84,10 +72,40 @@
         padding-top: 1em; 
         padding-right: 1em;
         padding-bottom: 10em;
-        left: 20%;
-        bottom: 100%;
-        top: 100%;
-        right: 20%;
+        left: 25%;
+        bottom: 50%;
+        top: 30%;
+        right: 50%;
+        z-index: 999;
+        position: fixed;
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        border-radius: 4px;
+        padding: 1rem;
+        font-size: 12px;
+      
+    }
+  }
+  
+  @media only screen and (max-width:600px) {
+    .confirmationContent{
+        width: 300px;
+        height: 200px;
+        border-radius: 12px;
+        background-color: white;
+        box-shadow: 0 0 0 50vmax rgba(0,0,0,0.4);
+        display: grid;
+        grid-template-columns: column;
+        padding-left: 1em;
+        padding-top: 1em; 
+        padding-right: 1em;
+        padding-bottom: 10em;
+        left: 12%;
+        bottom: 50%;
+        top: 30%;
+        right: 50%;
         z-index: 999;
         position: fixed;
         align-items: center;
@@ -98,4 +116,6 @@
         padding: 1rem;
       
     }
-} 
+  }
+  
+  
