--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -8,7 +8,7 @@
 
 @media only screen and (max-width:600px){
     .log{
-        margin: auto;
+        margin-left: 2.5rem;
         padding: 2rem 1.2rem;
     }
 }
