--- a/src/components/Flyer/flyer.css
+++ b/src/components/Flyer/flyer.css
@@ -188,10 +188,6 @@
       margin: 4rem 0 0 0.5rem;
       
     }
-    .vote{
-      margin-left: 17rem;
-      margin-top: 30rem;
-    }
     .governor{
       position: absolute;
       text-align: center;
@@ -227,5 +223,8 @@
       z-index: 1;
       padding: 0;
      
+    }
+    .name{
+      font-size: 10px;
     }
   }
