--- a/src/components/Flyer/flyer.css
+++ b/src/components/Flyer/flyer.css
@@ -52,15 +52,15 @@
   text-align: center;
  
 }
-/* .name{
-  font-size: 12px;
-} */
+.name{
+  font-size: 18px;
+}
   .dld2{
     position: relative;
     height: 530px;
     min-width: 0;
     width: 380px;
-    margin: 1rem 0 00.5rem 6rem;
+    margin: 1rem 0 00.5rem 7rem;
     float: right;
     
    
@@ -77,7 +77,7 @@
     background-color: rgba(0,0,0,.5);
     color: rgb(242, 236, 241);
     width: 100%;
-    font-size: 22px;
+    font-size: 20px;
     font-weight: bolder;
     height: 4rem;
     bottom: 0;
@@ -95,7 +95,7 @@
     color: rgb(219, 206, 206);
     width: 80px;
     height: 20px;
-    margin-left: 16rem;
+    margin-left: 17rem;
     margin-top: 26rem;
     border-radius: 20px;
     border: 3px solid green;
