--- a/src/pages/Flyer/flyer.css
+++ b/src/pages/Flyer/flyer.css
@@ -1,8 +1,8 @@
 .print{
     margin: auto;
-    left: 50%;
-    right: 50%;
-    width: 50%;
+    /* left: 50%; */
+    /* right: 50%; */
+    min-width: 50%;
     top: 50%;
     bottom: 50%;
 
