--- a/src/index.css
+++ b/src/index.css
@@ -42,8 +42,8 @@
     --card-width: 80%;
     --card-height:60%;
 
-    --flyer-width : 640;
-    --flyer-height:320;
+    --flyer-width : 375;
+    --flyer-height:385px;
 
     --profile-width: 90px;
     --profile-height: 90px;
