--- a/src/components/Flyer/flyer.css
+++ b/src/components/Flyer/flyer.css
@@ -106,6 +106,7 @@
   @media screen and (max-width: 1024px) {
     .cardBody{
       height: var(--card-height)
+
     }
     .hope{
       /* display: flex; */
@@ -154,10 +155,18 @@
 
   @media only screen and (max-width:600px) {
     .cardBody{
+      width: 100%;
       height: var(--flyer-height);
+      background: linear-gradient(rgba(0,0,0,0.45),rgba(0,0,0,0.45)), url("../../public/new.png");
+      background-position: center center;      ;
+      background-repeat: no-repeat;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
     }
     .hope{
-      margin: 0.5rem 0 0 0.4rem;
+      /* margin: 0.5rem 0 0 0.4rem; */
+
     }
     .head{
       display: inline-block;
@@ -169,20 +178,24 @@
       height: 20px;
     }
     .dld2{
-      position: relative;
+      display: none;
+      /* position: relative; */
       height: 250px;
       min-width: 0;
       width: 160px;
       margin: 3rem 0 0 3.5rem;
       float: right;
+      
     }
     .note{
-      display: block;
-      position: absolute;
-      align-items: center;
+      /* display: block; */
+      /* position: absolute; */
+      /* align-items: center; */
       margin: 3.5rem 0 0 1rem;
-      font-size: 8px;
+      font-size: 16px;
       font-weight: 500;
+      color: #fff;
+      transform: translateY(-5rem);
     }
     .profileImage{
       margin: 4rem 0 0 0.5rem;
