--- a/src/pages/Dashboard/dashboard.css
+++ b/src/pages/Dashboard/dashboard.css
@@ -5,6 +5,8 @@
     background-size:auto;
     background-position: center;
     margin: 0 auto;
+    background-repeat: no-repeat;
+    border: 1px solid red;
   }
   .content1{
     width: 100%;
@@ -61,4 +63,5 @@
       font-size: 26px;
       margin-top: 90px;
     }
+
   }
